# AdvPractical

./: .bazelrc  .clang-format  .gitignore  CMakeLists.txt  Edge.cpp  Edge.h  Edge.hh  Edge.hpp  Grader.cpp  Grader.h  Grader.hh  Grader.hpp  Graph.cpp  Graph.h  Graph.hh  Graph.hpp  InputGraphManually.cpp  InputGraphManually.h  InputGraphManually.hh  InputGraphManually.hpp  MODULE.bazel  MoveMeToPace2024-Testsets.cc  Node.cpp  Node.h  Node.hh  Node.hpp  Solver.hh  WORKSPACE  argtable3.c  cheat_sheet.txt  main.cpp  to_csv.py
.trunk/: .gitignore
app/: BUILD  main.cc
ds/: BUILD  bipartite_graph.h  bipartite_graph_test.cc  edge.h  graph.h
ds/empty_problem/: empy_problem.cc
ds/fpt/: BUILD  fpt_graph.h  fpt_graph_test.cc  fpt_node.h  graph_test.cc
ds/helper/: BUILD  empty_problem.h
ds/heuristic_graph/: BUILD  h_graph.h  h_graph_test.cc  heuristic_graph.h  heuristic_graph_test.cc
ds/reduction_graph/: BUILD  UndoAlgorithmStep.h  bit_vector.h  bit_vector_test.cc  max_heap.h  r_graph.h  r_graph_test.cc  reduction_graph.h  reduction_graph_test.cc  undo.h
experiments/: BUILD
experiments/algorithms/: BUILD  barycenter_algorithm.cc  barycenter_algorithm.h  barycenter_heuristic_algorithm.cc  barycenter_heuristic_algorithm.h  heuristic_algorithm.cc  heuristic_algorithm.h  median_algorithm.cc  median_algorithm.h  median_reduction_algorithm.cc  median_reduction_algorithm.h  problems.h  reduction_algorithm.cc  reduction_algorithm.h
io/: BUILD  input_graph_manually.h  ocsm_graph_reader.h  ocsm_graph_reader_test.cc  readGraph.h  readGraph_test.cc
oscm/: BUILD  grader.h  grader_test.cc
oscm/barycenter_algorithm/: BUILD  barycenter.h  barycenter_algorithm.h  barycenter_algorithm_test.cc
oscm/barycenter_heuristic_algorithm/: BUILD  barycenter_heuristic_algorithm.h  barycenter_heuristic_algorithm_test.cc
oscm/heuristic_algorithm/: BUILD  heuristic_algorithm.h  heuristic_algorithm_test.cc
oscm/median_algorithm/: BUILD  median_algorithm.h  median_algorithm_test.cc
oscm/median_reduction_algorithm/: BUILD  median_reduction_algorithm.h  median_reduction_algorithm_test.cc
oscm/reduction_algorithm/: BUILD  compute_crossings.h  compute_crossings_test.cc  r_algorithm.h  r_algorithm_test.cc  reduction_algorithm.h  reduction_algorithm_test.cc
releases/: heuristicRelease.cc
sample_files/: test
solver/bruteForce/: bruteForce.h
