###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "henrixapp_toolkit")
local_path_override(
    module_name = "henrixapp_toolkit",
    path = "toolkit/toolkit/",  # update this path to point to your copy of toolkit
)
bazel_dep(name = "abseil-cpp", version = "20230802.0")