#henrixapp_toolkit_dependencies = use_extension("//:extensions.bzl", "henrixapp_toolkit_dependencies")
#use_repo(henrixapp_toolkit_dependencies, "henrixapp_toolkit")
bazel_dep(name = "henrixapp_toolkit")
local_path_override(
    module_name = "henrixapp_toolkit",
    path = "../toolkit",  # update this path to point to your copy of toolkit
)
bazel_dep(name = "abseil-cpp", version = "20230802.0")
bazel_dep(name = "rules_python", version = "0.31.0")
bazel_dep(name = "googletest", version = "1.14.0")
python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)

python.toolchain(python_version = "3.11")